--- a/windows.html
+++ b/windows.html
@@ -133,7 +133,7 @@
                             <div class="tab-pane" id="address">
 								<div class="row">
 									 <div class="col-sm-12">
-										<div id="messageDiv" class="" style="display: none;">
+										<div id="messageDiv" class="" >
 								 <div class="bs-calltoaction bs-calltoaction-success">
                     <div class="row">
                         <div class="col-md-9 cta-contents">
