--- a/windows.html
+++ b/windows.html
@@ -81,6 +81,7 @@
 							<ul>
 	                            <li><a href="#alerts" data-toggle="tab">Alerts</a></li>
 								<li><a id="windowstab" href="#windows" data-toggle="tab">Windows</a></li>
+						<li><a id="framestab" href="#frames" data-toggle="tab">Frames</a></li>
 			
 	                        </ul>
 
@@ -130,7 +131,7 @@
 
                                 </div>
                             </div>
-                            <div class="tab-pane" id="address">
+                            <div class="tab-pane" id="frames">
 								<div class="row">
 									 <div class="col-sm-12">
 										<div id="messageDiv" class="" >
