--- a/windows.html
+++ b/windows.html
@@ -131,9 +131,9 @@
 
                                 </div>
                             </div>
-                            <div class="tab-pane" id="frames">
+                            <div class="tab-pane" id="frames" style="width: 100%; height:100%;">
 								
-									 <div class="col-sm-12" style="width: 100%; height:100%;">
+									 <div style="width: 100%; height:100%;">
 										<iframe src="https://www.selenium.dev/" style="width: 100%; height:100%;"></iframe>
 									</div>
 							
