--- a/html5-error.html
+++ b/html5-error.html
@@ -71,7 +71,8 @@
 
 <header>
     <a href="https://www.automation.co.il">
-        Gal Matalon - Automation Course<br>
+        Python Playwright Automation Course<br>
+		המכללה לאוטומציה - גל מטלון<br>
 		<i>www.automation.co.il</i>
     </a>
 </header>
